--- a/templates/index/sobre.html
+++ b/templates/index/sobre.html
@@ -9,7 +9,7 @@
 	</h1>
 
 	<p>
-		Sobre nós! 😊
+		Somos alunos do curos de Ciências de Dados e Negócios da Escola Superior de Propaganda e Marketing (ESPM) e estamos desenvolvendo um projeto onde colocamos sensores em áreas específicas das academias em determinadas datas e horários para coletar dados de utilização dos espaços. Esses dados são enviados para um banco de dados em nuvem, onde são processados e disponibilizados para visualização em gráficos. O objetivo é fornecer informações úteis para os proprietários de academias, ajudando-os a otimizar o uso dos espaços e poder vizualizar o uso das máquinas para aumentar o número das mesmas ou para manutenções preventivas, para assim melhorar a experiência dos alunos.
 	</p>
 
 </div>
