--- a/templates/index/index.html
+++ b/templates/index/index.html
@@ -3,162 +3,184 @@
 {% block body %}
 
 <div class="container-fluid">
+    <div class="text-center my-4">
+        <h1 class="display-4 font-weight-bold">Análise de Academia</h1>
+        <p class="lead">Monitoramento de dados via sensores em tempo real</p>
+    </div>
 
-	<h1>
-		Projeto
-	</h1>
+    <div class="row">
+        <!-- Coluna esquerda - Formulários -->
+        <div class="col-md-3">
+            <div class="sidebar-box">
+                <h6 class="box-title">Cadastrar Academia</h6>
+                <form id="form-cadastro-academia">
+                    <input type="text" id="nomeAcademia" name="nomeAcademia" class="form-control-sm input-box mb-2" placeholder="Nome da academia" required>
+                    <button type="submit" class="btn btn-primary btn-sm full-width-btn">Cadastrar</button>
+                </form>
+            
+                <ul class="lista-cadastrada mt-3" id="lista-academias">
+                    <li>Smart Fit</li>
+                    <li>Iron Berg</li>
+                </ul>
+            </div>
+            
+            <div class="sidebar-box mt-3">
+                <h6 class="box-title">Cadastrar Área</h6>
+                <form id="form-cadastro-area">
+                    <select id="academia" name="academia" class="form-control-sm input-box mb-2" required>
+                        <option value="">Selecione a academia</option>
+                        <option value="Smart Fit">Smart Fit</option>
+                        <option value="Iron Berg">Iron Berg</option>
+                    </select>
+            
+                    <select id="area" name="area" class="form-control-sm input-box mb-2" required>
+                        <option value="">Selecione a área</option>
+                        <option value="Peito/Tríceps">Peito/Tríceps</option>
+                        <option value="Costas/Bíceps">Costas/Bíceps</option>
+                        <option value="Membros Inferiores">Membros Inferiores</option>
+                        <option value="Aeróbicos">Aeróbicos</option>
+                    </select>
+            
+                    <button type="submit" class="btn btn-primary btn-sm full-width-btn">Cadastrar Área</button>
+                </form>
+            </div>
 
-	<div class="row">
-		<div class="col-sm-4">
+            <div class="sidebar-box mt-3">
+                <h6 class="box-title">Academias Cadastradas</h6>
+                <ul class="lista-cadastrada mt-2" id="lista-academias-cadastradas">
+                    <li>Smart Fit</li>
+                    <li>Ironberg</li>
+                </ul>
+            </div>
+        </div>
 
-			<div class="card shadow my-4">
-				<div class="card-body">
-					<form id="form">
-						<div class="form-group">
-							<label for="data">Data</label>
-							<input id="data" name="data" class="form-control" type="date" value="{{ hoje }}" />
-						</div>
-
-						<button type="submit" class="btn btn-primary">Listar</button>
-					</form>
-				</div>
-			</div>
-
-		</div>
-	</div>
-
-	<div class="card shadow my-4">
-		<div class="card-body" id="div-grafico"></div>
-	</div>
-
+        <!-- Coluna direita - Gráfico -->
+        <div class="col-md-9">
+            <div class="card shadow my-2">
+                <div class="card-header bg-secondary text-white">
+                    <strong>Gráfico de Utilização</strong>
+                </div>
+                <div class="card-body" id="div-grafico">
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
 
-<script src="/static/js/jquery-validate/jquery.validate.min.js"></script>
-<script src="/static/js/jquery-validate/additional-methods.min.js"></script>
-<script src="/static/js/jquery-validate/localization/messages_pt_BR.min.js"></script>
-<script type="text/javascript" src="/static/js/chart.js/chart.min.js"></script>
-
 <script type="text/javascript">
-	"use strict";
+    "use strict";
 
-	$("#form").validate({
-		rules: {
-			data: {
-				required: true
-			}
-		},
-		submitHandler: function () {
-			atualizarDados();
-		}
-	});
+    $("#form-cadastro-academia").validate({
+        rules: {
+            "nome-academia": {
+                required: true,
+                minlength: 2
+            }
+        },
+        submitHandler: function () {
+            alert("Academia cadastrada com sucesso!");
+        }
+    });
 
-	async function atualizarDados() {
-		waitSwal();
+    $("#form-cadastro-area").validate({
+        rules: {
+            academia: {
+                required: true
+            },
+            area: {
+                required: true
+            }
+        },
+        submitHandler: function () {
+            alert("Área cadastrada com sucesso!");
+        }
+    });
 
-		try {
 
-			let response = await fetch("/obterDados");
+    async function atualizarDados() {
+        waitSwal();
 
-			if (response.ok) {
+        try {
+            let response = await fetch("/obterDados");
 
-				Swal.close();
+            if (response.ok) {
+                Swal.close();
 
-				let div = document.getElementById("div-grafico");
-				div.innerHTML = '<canvas id="grafico-barras" style="height: 50vh;"></canvas>';
+                let div = document.getElementById("div-grafico");
+                div.innerHTML = '<canvas id="grafico-barras" style="height: 50vh;"></canvas>';
 
-				let labels = [], data = [];
+                let labels = [], data = [];
 
-				let dados = await response.json();
-				if (!dados || !dados.length) {
-					Swal.fire("Erro", "Sem dados na data especificada!", "error");
-					return;
-				}
+                let dados = await response.json();
+                if (!dados || !dados.length) {
+                    Swal.fire("Erro", "Sem dados na data especificada!", "error");
+                    return;
+                }
 
-				for (let i = 0; i < dados.length; i++) {
-					labels.push(dados[i].dia);
-					data.push(dados[i].valor);
-				}
+                for (let i = 0; i < dados.length; i++) {
+                    labels.push(dados[i].dia);
+                    data.push(dados[i].valor);
+                }
 
-				let grafico = new Chart(document.getElementById("grafico-barras"), {
-					type: "bar",
-					data: {
-						labels: labels,
-						datasets: [{
-							label: "Valor",
-							backgroundColor: "#4e73df",
-							hoverBackgroundColor: "#2e59d9",
-							borderColor: "#4e73df",
-							data: data,
-						}],
-					},
-					options: {
-						maintainAspectRatio: false,
-						layout: {
-							padding: {
-								left: 10,
-								right: 25,
-								top: 25,
-								bottom: 0
-							}
-						},
-						scales: {
-							x: {
-								gridLines: {
-									display: false,
-									drawBorder: false
-								},
-								ticks: {
-									maxTicksLimit: 10
-								},
-								maxBarThickness: 25,
-							},
-							y: {
-								//display: false,
-								ticks: {
-									min: 0,
-									max: 10,
-									maxTicksLimit: 10,
-									padding: 10
-								},
-								gridLines: {
-									color: "rgb(234, 236, 244)",
-									zeroLineColor: "rgb(234, 236, 244)",
-									drawBorder: false,
-									borderDash: [2],
-									zeroLineBorderDash: [2]
-								}
-							},
-						},
-						legend: {
-							display: false
-						},
-						tooltips: {
-							titleMarginBottom: 10,
-							titleFontColor: '#6e707e',
-							titleFontSize: 14,
-							backgroundColor: "rgb(255,255,255)",
-							bodyFontColor: "#858796",
-							borderColor: '#dddfeb',
-							borderWidth: 1,
-							xPadding: 15,
-							yPadding: 15,
-							displayColors: false,
-							caretPadding: 10
-						},
-					}
-				});
+                new Chart(document.getElementById("grafico-barras"), {
+                    type: "bar",
+                    data: {
+                        labels: labels,
+                        datasets: [{
+                            label: "Valor",
+                            backgroundColor: "#4e73df",
+                            hoverBackgroundColor: "#2e59d9",
+                            borderColor: "#4e73df",
+                            data: data,
+                        }],
+                    },
+                    options: {
+                        maintainAspectRatio: false,
+                        layout: {
+                            padding: {
+                                left: 10,
+                                right: 25,
+                                top: 25,
+                                bottom: 0
+                            }
+                        },
+                        scales: {
+                            x: {
+                                ticks: { maxTicksLimit: 10 },
+                                maxBarThickness: 25,
+                            },
+                            y: {
+                                ticks: {
+                                    min: 0,
+                                    max: 10,
+                                    maxTicksLimit: 10,
+                                    padding: 10
+                                }
+                            },
+                        },
+                        plugins: {
+                            legend: { display: false },
+                            tooltip: {
+                                backgroundColor: "rgb(255,255,255)",
+                                bodyColor: "#858796",
+                                borderColor: '#dddfeb',
+                                borderWidth: 1,
+                                padding: 10
+                            }
+                        }
+                    }
+                });
 
-			} else {
-				await exibirErro(response);
-			}
+            } else {
+                await exibirErro(response);
+            }
 
-		} catch (ex) {
-			Swal.fire("Erro", "Erro ao listar os dados: " + ex.message, "error");
-		}
-	}
+        } catch (ex) {
+            Swal.fire("Erro", "Erro ao listar os dados: " + ex.message, "error");
+        }
+    }
 
-	atualizarDados();
-
+    atualizarDados();
 </script>
 
 {% endblock %}
