--- a/templates/index/index.html
+++ b/templates/index/index.html
@@ -3,9 +3,14 @@
 {% block body %}
 
 <div class="container-fluid">
+    
     <div class="text-center my-4">
-        <h1 class="display-4 font-weight-bold">Análise de Academia</h1>
-        <p class="lead">Monitoramento de dados via sensores em tempo real</p>
+        <h1 class="display-4 font-weight-bold">
+            Análise de Academia
+        </h1>
+        <p class="lead">
+            Monitoramento de dados via sensores em tempo real
+        </p>
     </div>
 
     <div class="row">
