--- a/templates/layout.html
+++ b/templates/layout.html
@@ -19,6 +19,7 @@
 	<link rel="stylesheet" type="text/css" href="/static/css/bootstrap.min.css" />
 	<link rel="stylesheet" type="text/css" href="/static/css/sweetalert2.min.css" />
 	<link rel="stylesheet" type="text/css" href="/static/css/estilo.css" />
+	<link rel="stylesheet" type="text/css" href="/static/css/layout-style.css" />
 
 	<script type="text/javascript" src="/static/js/jquery.min.js"></script>
 	<script type="text/javascript" src="/static/js/bootstrap.bundle.min.js"></script>
@@ -40,18 +41,21 @@
 
 		{% if not esconder_layout %}
 
-		<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-			<a class="navbar-brand" href="/">
-				Projeto
-			</a>
-
-			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggler" aria-controls="navbarToggler" aria-expanded="false" aria-label="Alternar navegação">
-				<span class="navbar-toggler-icon"></span>
-			</button>
-
-			<div class="collapse navbar-collapse" id="navbarToggler">
-				<div class="navbar-nav">
-					<a class="nav-link" href="/sobre">Sobre</a>
+		<nav class="navbar navbar-expand-lg navbar-dark">
+			<div class="container">
+				<a class="navbar-brand" href="/">CoreFlow</a>
+				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav">
+					<span class="navbar-toggler-icon"></span>
+				</button>
+				<div class="collapse navbar-collapse" id="navbarNav">
+					<ul class="navbar-nav ml-auto">
+						<li class="nav-item">
+							<a class="nav-link" href="{{ url_for('dashboard') }}"><i class="fas fa-chart-line"></i> Dashboard</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="{{ url_for('sobre') }}"><i class="fas fa-info-circle"></i> Sobre</a>
+						</li>
+					</ul>
 				</div>
 			</div>
 		</nav>
@@ -66,13 +70,12 @@
 
 		{% if not esconder_layout %}
 
-		<div class="rodape">
-			<a class="link-rodape" href="https://sistemasdeinformacao.espm.edu.br" target="_blank">
-				<small>Desenvolvido em 2025 pelo curso de Sistemas de Informação da ESPM</small>
-				<br/>
-				<img src="/static/img/logo-si-512.png" style="width: 100%; max-width: 150px;" />
-			</a>
-		</div>
+		<footer class="rodape">
+			<div class="container text-center">
+				<p class="mb-0">&copy; 2023 CoreFlow Analytics. Todos os direitos reservados.</p>
+				<p class="mb-0 small">Versão 1.0.0</p>
+			</div>
+		</footer>
 
 		{% endif %}
 
