--- a/static/css/estilo.css
+++ b/static/css/estilo.css
@@ -6,6 +6,7 @@ html,
 body {
 	/* Para fazer o rodapé ficar sempre na parte inferior da página ;) */
 	min-height: 100vh;
+	background-color: #e6f2ff;
 }
 
 .limitador {
