--- a/static/css/estilo.css
+++ b/static/css/estilo.css
@@ -1,3 +1,7 @@
+* {
+  box-shadow: none !important;
+}
+
 img {
 	max-width: 100%;
 }
@@ -5,12 +9,15 @@ img {
 html,
 body {
 	/* Para fazer o rodapé ficar sempre na parte inferior da página ;) */
-	min-height: 100vh;
-	background-color: #e6f2ff;
+	/* min-height: 100vh; */
+	background: #fff;
+    color: #000;
+    letter-spacing: -.008rem;
+	
 }
 
 .limitador {
-	max-width: 1200px;
+	/* max-width: 1200px; */
 	margin: 0px auto;
 
 	/* Para fazer o rodapé ficar sempre na parte inferior da página ;) */
