--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" lang="pt-br">
+
 <head>
 	<meta charset="utf-8" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
@@ -16,7 +17,7 @@
 		https://getbootstrap.com/docs/4.6/getting-started/introduction/
 	-->
 
-	<link rel="stylesheet" type="text/css" href="/static/css/bootstrap.min.css" />
+	<link rel="stylesheet" type="text/css" href="/static/css/bootstrap.css" />
 	<link rel="stylesheet" type="text/css" href="/static/css/sweetalert2.min.css" />
 	<link rel="stylesheet" type="text/css" href="/static/css/estilo.css" />
 	<link rel="stylesheet" type="text/css" href="/static/css/layout-style.css" />
@@ -33,6 +34,7 @@
 	{% block head %}{% endblock %}
 
 </head>
+
 <body>
 
 	<div class="limitador">
@@ -45,13 +47,24 @@
 
 		{% if not esconder_layout %}
 
-		<nav class="navbar navbar-expand-lg navbar-dark">
-			<div class="container">
-				<a class="navbar-brand" href="/">CoreFlow</a>
-				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav">
-					<span class="navbar-toggler-icon"></span>
-				</button>
-				<div class="collapse navbar-collapse" id="navbarNav">
+		<!-- <nav class="navbar navbar-expand-lg navbar-dark">
+			<div class="container-fluid">
+
+				<div class="col-6">
+					<a class="navbar-brand" href="#">CoreFlow</a>
+				</div>
+				<div class="col-6 text-right">
+					<div>
+						<a href="">Overview</a>
+						<a href="">Blog</a>
+						<a href="">Features</a>
+						<a href="">About Us</a>
+						<a href="">Log in</a>
+						<a href="">Start analysis</a>
+					</div>
+				</div> -->
+
+		<!-- <div class="collapse navbar-collapse" id="navbarNav">
 					<ul class="navbar-nav ml-auto">
 						<li class="nav-item">
 							<a class="nav-link" href="{{ url_for('dashboard') }}"><i class="fas fa-chart-line"></i> Dashboard</a>
@@ -60,9 +73,29 @@
 							<a class="nav-link" href="{{ url_for('sobre') }}"><i class="fas fa-info-circle"></i> Sobre</a>
 						</li>
 					</ul>
-				</div>
-			</div>
-		</nav>
+				</div> -->
+		<!-- </div> -->
+		<!-- </nav> -->
+
+
+<nav class="d-flex justify-content-between align-items-center border-bottom bg-white fs-5">
+  <div class="d-flex align-items-center">
+    <a class="fw-bold fs-1 text-black text-decoration-none  px-4" href="#">CoreFlow</a>
+  </div>
+  <div class="d-flex align-items-center gap-3">
+	<div id="links">
+<a class="text-black text-decoration-none py-2 px-3 nav-link-hover" href="#">Overview</a>
+<a class="text-black text-decoration-none py-2 px-3 nav-link-hover" href="#">Blog</a>
+<a class="text-black text-decoration-none py-2 px-3 nav-link-hover" href="#">Features</a>
+<a class="text-white text-decoration-none bg-dark py-2 px-3 nav-link-hover" href="#">About Us</a>
+	</div>
+	<div class="d-flex align-items-center border-start ">		
+		<a class="btn rounded-0 px-3 fw-normal fs-5 py-4" href="#">Log in</a>
+		<a class="btn text-white bg-dark border-start rounded-0 px-3 fw-normal fs-5 py-4" href="#">Start analysis</a>
+	</div>
+  </div>
+</nav>
+
 
 		{% endif %}
 
@@ -74,7 +107,7 @@
 
 		{% if not esconder_layout %}
 
-		<footer class="rodape">
+		<footer class="rodape" style="display: none;">
 			<div class="container text-center">
 				<p class="mb-0">&copy; 2023 CoreFlow Analytics. Todos os direitos reservados.</p>
 				<p class="mb-0 small">Versão 1.0.0</p>
@@ -88,4 +121,5 @@
 	</div>
 
 </body>
+
 </html>
