--- a/templates/index/dashboard.html
+++ b/templates/index/dashboard.html
@@ -1,8 +1,11 @@
 {% extends 'layout.html' %}
 
 {% block body %}
+<div class="limitador">
 
 <div class="filter-section">
+    <h1 class="lead mb-4">Visualize e analise o uso do espaço da sua academia com dados em tempo real.</h1>
+    
     <h4 class="mb-4">Filtros de Análise</h4>
     <div class="row">
         <div class="col-md-3">
@@ -122,6 +125,7 @@
     </div>
 </div>
 
+</div>
 <script type="text/javascript" src="/static/js/pages/dashboard.js"></script>
 
 {% endblock %}
