--- a/templates/layout.html
+++ b/templates/layout.html
@@ -80,18 +80,17 @@
 <nav class="navbar-desktop fixed-top d-none d-lg-flex justify-content-between align-items-center border-bottom bg-white fs-5">
 
   <div class="d-flex align-items-center">
-    <a class="fw-bold fs-1 text-black text-decoration-none  px-4" href="#">CoreFlow</a>
+    <a class="fw-bold fs-1 text-black text-decoration-none  px-4" href="/">CoreFlow</a>
   </div>
   <div class="d-flex align-items-center gap-3">
 	<div id="links">
-<a class="text-black text-decoration-none py-2 px-3" href="#">Overview</a>
-<a class="text-black text-decoration-none py-2 px-3" href="#">Blog</a>
-<a class="text-black text-decoration-none py-2 px-3" href="#">Features</a>
-<a class="text-white text-decoration-none bg-dark py-2 px-3" href="#">About Us</a>
+<a class="text-black text-decoration-none py-2 px-3" href="/">Main</a>
+<a class="text-black text-decoration-none py-2 px-3" href="{{ url_for('tempoReal') }}">Heatmap</a>
+<a class="text-white text-decoration-none bg-dark py-2 px-3" href="{{ url_for('sobre') }}">About Us</a>
 	</div>
 	<div class="d-flex align-items-center border-start ">		
-		<a class="btn rounded-0 px-3 fw-normal fs-5 py-4" href="#">Log in</a>
-		<a class="btn text-white bg-dark border-start rounded-0 px-3 fw-normal fs-5 py-4" href="#">Start analysis</a>
+		<a class="btn rounded-0 px-3 fw-normal fs-5 py-4" href="{{ url_for('login') }}">Log in</a>
+		<a class="btn text-white bg-dark border-start rounded-0 px-3 fw-normal fs-5 py-4" href="{{ url_for('dashboard') }}">Start analysis</a>
 	</div>
   </div>
 </nav>
@@ -104,9 +103,8 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarMobile">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li><a class="nav-link text-black" href="#">Overview</a></li>
-        <li><a class="nav-link text-black" href="#">Blog</a></li>
-        <li><a class="nav-link text-black" href="#">Features</a></li>
+        <li><a class="nav-link text-black" href="#">Main</a></li>
+        <li><a class="nav-link text-black" href="#">Dashboard</a></li>
         <li><a class="nav-link text-white bg-dark rounded px-2" href="#">About Us</a></li>
       </ul>
       <div class="d-flex">
@@ -129,12 +127,14 @@
 
 		{% if not esconder_layout %}
 
+		
 		<!-- style="display: none;" -->
-		<footer class="rodape text-white">
-			<div class="container text-center">
-				<p class="mb-0">&copy; 2023 CoreFlow Analytics. Todos os direitos reservados.</p>
-				<p class="mb-0 small">Versão 1.0.0</p>
-			</div>
+		<footer class="rodape">
+			<a class="link-rodape" href="https://sistemasdeinformacao.espm.edu.br" target="_blank">
+				<small class="text-white mb-1">Desenvolvido em 2025 pelo curso de Sistemas de Informação da ESPM</small>
+				<br/>
+				<img src="/static/img/logo-si-512.png" style="width: 100%; max-width: 150px;" />
+			</a>
 		</footer>
 
 		{% endif %}
