Ajustes de UI e do heatmap

--- a/templates/index/index.html
+++ b/templates/index/index.html
@@ -2,7 +2,7 @@
 
 {% block body %}
 <section
-  class="mt-5 hero-section d-flex flex-column justify-content-center align-items-center text-center px-5 py-5 border-bottom position-relative"
+  class="hero-section d-flex flex-column justify-content-center align-items-center text-center px-5 py-5 border-bottom position-relative"
   style="min-height: 80vh; background-color: #F0F0F0;">
   <div class="hero-text">
     <h1 class="display-1 text-dark mb-4">
