--- a/templates/index/sobre.html
+++ b/templates/index/sobre.html
@@ -7,19 +7,19 @@
 		<div class="col-lg-8 mx-auto">
 			<div class="card">
 				<div class="card-header bg-white">
-					<h3 class="mb-0">Sobre o CoreFlow</h3>
+					<h3 class="mb-0" style="font-size: 22pt;">Sobre o CoreFlow</h3>
 				</div>
 				<div class="card-body">
 					<h5 class="text-primary mb-4">Transformando dados em decisões estratégicas para academias</h5>
 					
 					<div class="mb-5">
-						<h6 class="font-weight-bold">O Projeto</h6>
+						<h6 class="mb-1" style="font-size: 18pt; font-weight: bold !important;">O Projeto</h6>
 						<p>O CoreFlow é uma solução inovadora de análise de dados para academias, desenvolvida para otimizar a disposição de equipamentos e melhorar a experiência dos usuários.</p>
 						<p>Através de sensores estratégicos posicionados em diferentes zonas da academia, coletamos dados em tempo real sobre o fluxo de pessoas, tempo de uso dos equipamentos e padrões de ocupação.</p>
 					</div>
 					
 					<div class="mb-5">
-						<h6 class="font-weight-bold">Objetivos</h6>
+						<h6 class="mb-1" style="font-size: 18pt; font-weight: bold !important;">Objetivos</h6>
 						<ul>
 							<li class="mb-2">Identificar os equipamentos e zonas mais utilizadas</li>
 							<li class="mb-2">Otimizar a disposição dos aparelhos para melhor fluxo</li>
@@ -30,7 +30,7 @@
 					</div>
 					
 					<div class="mb-4">
-						<h6 class="font-weight-bold">Como Funciona</h6>
+						<h6 class="mb-1" style="font-size: 18pt; font-weight: bold !important;">Como Funciona</h6>
 						<div class="row">
 							<div class="col-md-4 mb-3">
 								<div class="text-center p-3 border rounded">
@@ -43,7 +43,7 @@
 								<div class="text-center p-3 border rounded">
 									<i class="fas fa-cloud fa-2x text-primary mb-3"></i>
 									<h6>Processamento</h6>
-									<p class="small">Dados são enviados para nossa plataforma em nuvem</p>
+									<p class="small">Dados são enviados para nossa plataforma</p>
 								</div>
 							</div>
 							<div class="col-md-4 mb-3">
@@ -57,7 +57,7 @@
 					</div>
 					
 					<div class="team-section mt-5">
-						<h6 class="font-weight-bold">Nossa Equipe</h6>
+						<h6 class="mb-1" style="font-size: 18pt; font-weight: bold !important;">Nossa Equipe</h6>
 						<div class="row">
 							<div class="col-md-6 mb-4">
 								<div class="d-flex align-items-center">
