--- a/static/css/estilo.css
+++ b/static/css/estilo.css
@@ -44,6 +44,10 @@ body {
 	border-color: darkorange !important;
 }
 
+.cadastrar-hover {
+	text-decoration: none !important;
+}
+
 .cadastrar-hover:hover {
 	text-decoration: underline !important;
 }
