--- a/templates/index/cadastrar.html
+++ b/templates/index/cadastrar.html
@@ -13,7 +13,7 @@
           
                     <form id="cadastroForm">
 
-                        <div class="form-row">
+                        <div class="row mb-3">
                             <div class="form-group col-md-6">
                                 <label for="nome">
                                     Nome
@@ -28,14 +28,14 @@
                             </div>
                         </div>
         
-                        <div class="form-group">
+                        <div class="form-group mb-3">
                             <label for="email">
                                 E-mail
                             </label>
                             <input type="email" class="form-control" id="email" placeholder="exemplo@email.com" required>
                         </div>
 
-                        <div class="form-row">
+                        <div class="row mb-3">
                             <div class="form-group col-md-6">
                                 <label for="razao-social">
                                     Razão Social
@@ -50,14 +50,14 @@
                             </div>
                         </div>
 
-                        <div class="form-group">
+                        <div class="form-group mb-3">
                             <label for="endereco-empresa">
                                 Endereço da Empresa
                             </label>
                             <input type="text" class="form-control" id="endereco-empresa" placeholder="Endereço da sua empresa" required>
                         </div>
             
-                        <div class="form-row">
+                        <div class="row mb-3">
                             <div class="form-group col-md-6">
                                 <label for="senha">
                                     Senha
@@ -72,11 +72,11 @@
                             </div>
                         </div>
             
-                        <div class="form-group form-check">
+                        <div class="form-group form-check mb-2">
                             <input type="checkbox" class="form-check-input" id="termos" required>
                             <label class="form-check-label" for="termos">
                                 Eu concordo com os
-                                <a href="/termos" style="color: darkorange;">
+                                <a class="cadastrar-hover" href="/termos" style="color: darkorange;">
                                     Termos de Serviço
                                 </a>
                             </label>
@@ -89,7 +89,7 @@
                         <div class="text-center mt-3">
                             <p>
                                 Já tem uma conta? 
-                                <a href="/login" style="color: darkorange;">
+                                <a class="cadastrar-hover" href="{{ url_for("login") }}" style="color: darkorange;">
                                     Faça login
                                 </a>
                             </p>
