--- a/templates/index/login.html
+++ b/templates/index/login.html
@@ -7,20 +7,20 @@
         <div class="col-md-5">
             <div class="card shadow">
                 <div class="card-body p-4">
-                    <h1 class="card-title text-center mb-4" style="color: orange">
+                    <h1 class="card-title text-center mb-4" style="color: orange; font-size: 26pt;">
                         Login
                     </h1>
                     <div class="alert alert-danger" id="errorMessage" style="display: none;"></div>
                     <div class="alert alert-success" id="successMessage" style="display: none;"></div>
                     <form id="loginForm" class="mb-3">
-                        <div class="form-group">
+                        <div class="form-group mb-3">
                             <label for="email">
                                 Email
                             </label>
                             <input type="text" class="form-control" id="email" placeholder="Digite seu email" required />
                         </div>
 
-                        <div class="form-group">
+                        <div class="form-group mb-4">
                             <label for="password">
                                 Senha
                             </label>
