--- a/templates/layout.html
+++ b/templates/layout.html
@@ -84,13 +84,13 @@
   </div>
   <div class="d-flex align-items-center gap-3">
 	<div id="links">
-<a class="text-black text-decoration-none py-2 px-3" href="/">Início</a>
+<a class="text-black text-decoration-none py-2 px-3" href="{{ url_for('index') }}">Início</a>
 <a class="text-black text-decoration-none py-2 px-3" href="{{ url_for('tempoReal') }}">Tempo Real</a>
 <a class="text-white text-decoration-none bg-dark py-2 px-3" href="{{ url_for('sobre') }}">Sobre</a>
 	</div>
 	<div class="d-flex align-items-center border-start ">		
 		<a class="btn rounded-0 px-3 fw-normal fs-5 py-4" href="{{ url_for('login') }}">Log in</a>
-		<a class="btn text-white bg-dark border-start rounded-0 px-3 fw-normal fs-5 py-4" href="{{ url_for('dashboard') }}">Start analysis</a>
+		<a class="btn text-white bg-dark border-start rounded-0 px-3 fw-normal fs-5 py-4" href="{{ url_for('dashboard') }}">Demais Análises</a>
 	</div>
   </div>
 </nav>
@@ -103,13 +103,13 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarMobile">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li><a class="nav-link text-black" href="#">Main</a></li>
-        <li><a class="nav-link text-black" href="#">Dashboard</a></li>
-        <li><a class="nav-link text-white bg-dark rounded px-2" href="#">About Us</a></li>
+        <li><a class="nav-link text-black" href="{{ url_for('index') }}">Início</a></li>
+        <li><a class="nav-link text-black" href="{{ url_for('tempoReal') }}">Tempo Real</a></li>
+        <li><a class="nav-link text-white bg-dark rounded px-2" href="{{ url_for('sobre') }}">Sobre</a></li>
       </ul>
       <div class="d-flex">
-        <a class="btn rounded-0 px-3 fw-normal fs-5 py-2 me-2" href="#">Log in</a>
-        <a class="btn text-white bg-dark rounded-0 px-3 fw-normal fs-5 py-2" href="#">Start analysis</a>
+        <a class="btn rounded-0 px-3 fw-normal fs-5 py-2 me-2" href="{{ url_for('login') }}">Log in</a>
+        <a class="btn text-white bg-dark rounded-0 px-3 fw-normal fs-5 py-2" href="{{ url_for('dashboard') }}">Demais Análises</a>
       </div>
     </div>
   </div>
